manifests/apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: http
      protocol: TCP
