manifests/apps/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-https
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - sonarr.example.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: sonarr
          port: 8989
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
